@@ -86,7 +86,7 @@ For example, a &quot;Family&quot; membership may update all linked accounts (fam
         <a name="desc_access"></a>Purchase Allowed by...
       </td>
       <td class="col1 leftalign">
-        Select whether this type of membership can be purchased by anyone, or only by administrators. For special plans, such as free honorary memberships, you may not want the public to be able to purchase them.
+        Select the glFusion group that is allowed to view and purchase this type of membership. Normally this is probably &quot;All Users&quot; but for special plans, such as free honorary memberships, you may not want the public to be able to purchase them.
       </td>
     </tr>
 
