@@ -6,3 +6,4 @@ glFusion Membership Plugin - Change Log
 - Do not remove default membership group during plugin removal
 - Add a function to the admin page to import existing site members
 - Added a way to disable new-user welcome messages.
+- Add handling for membership numbers
